@@ -1,4 +1,5 @@
 BOOLEAN:BOXED,POINTER,POINTER
+VOID:STRING,STRING,UINT
 VOID:STRING,STRING
 BOOLEAN:POINTER
 VOID:POINTER,POINTER
